--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- container & title -->
     <div class="container my-4">
-        <h1 class="my-4 text-center">Ninja Chat</h1>
+        <h1 class="my-4 text-center">Live Chat App</h1>
         
     <!-- buttons for chatrooms -->
     <div class="chat-rooms mb-3 text-center">
@@ -54,6 +54,7 @@
     </form>
       </div>  
 
+<script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-firestore.js"></script>
